--- a/docs/idea-to-code-workflow.adoc
+++ b/docs/idea-to-code-workflow.adoc
@@ -12,7 +12,11 @@ Let's look at each step.
 
 == Development starts with an idea...
 
-The starting point for development is an idea, such as:
+The starting point for development is an idea.
+
+The idea can either be for a brand new application (greenfield) or an enhancement to an existing application (brownfield).
+
+For example:
 
 ```
 I want a GoLang TUI application that takes a directory of source code as an argument.
@@ -25,6 +29,7 @@ The subdirectories are indented.
 ```
 
 See the https://github.com/humansintheloop-dev/humansintheloop-dev-examples-loctree/blob/master/docs/features/loc-outliner/loc-outliner-idea.txt[loctree idea].
+
 
 == ... followed by interactive Q&A ... 
 
@@ -40,7 +45,7 @@ $ brainstorm-idea.sh docs/features/loc-outliner
 Note: 
 
 * `loc-outliner` will be used as the idea name and any generated idea-related files will be prefixed with `loc-outliner`
-* It's good to run this command from the to-be-created project's root directory.
+* It's a good idea to run this command from new or existing's project's root directory.
 
 Here's the results of the Q&A session: https://github.com/humansintheloop-dev/humansintheloop-dev-examples-loctree/blob/master/docs/features/loc-outliner/loc-outliner-discussion.md[loctree Q&A].
 
