--- a/docs/scripts/scripts.adoc
+++ b/docs/scripts/scripts.adoc
@@ -21,15 +21,9 @@ brainstorm-idea.sh
         ↓
    make-spec.sh
         ↓
-    [Choose Path]
+   make-plan.sh
         ↓
- ┌──────────────┬────────────────┐
- ↓              ↓                ↓
-make-plan.sh   OR   make-stories.sh
- ↓                       ↓
-implement-plan.sh   make-story-plan.sh
-                         ↓
-                 implement-story-plan.sh
+ implement-plan.sh
 ----
 
 == Initial Idea Development
@@ -39,28 +33,11 @@ implement-plan.sh   make-story-plan.sh
 
 == Planning Phase
 
-Choose one of the following planning approaches:
-
-=== Direct Planning
-
-* link:make-plan.adoc[make-plan.sh] - Generate implementation plan directly from specification
-
-=== Story-Driven Planning
-
-* link:make-stories.adoc[make-stories.sh] - Create user stories from specification
-* link:make-story-plan.adoc[make-story-plan.sh] - Generate story-based implementation plan
+* link:make-plan.adoc[make-plan.sh] - Generate implementation plan from specification
 
 == Implementation Phase
 
-Execute the plan created in the planning phase:
-
-=== Direct Implementation
-
-* link:implement-plan.adoc[implement-plan.sh] - Execute the implementation plan (requires make-plan.sh)
-
-=== Story-Driven Implementation
-
-* link:implement-story-plan.adoc[implement-story-plan.sh] - Execute the story-based plan (requires make-story-plan.sh)
+* link:implement-plan.adoc[implement-plan.sh] - Execute the implementation plan
 
 == Quick Start Examples
 
@@ -86,7 +63,7 @@ The orchestrator will:
 
 === Manual Execution
 
-For a new project using the story-driven approach:
+For a new project:
 
 [source,bash]
 ----
@@ -96,12 +73,9 @@ For a new project using the story-driven approach:
 # 2. Create specification
 ./workflow-scripts/make-spec.sh ~/ideas/my-app
 
-# 3. Generate user stories
-./workflow-scripts/make-stories.sh ~/ideas/my-app
+# 3. Create implementation plan
+./workflow-scripts/make-plan.sh ~/ideas/my-app
 
-# 4. Create story-based plan
-./workflow-scripts/make-story-plan.sh ~/ideas/my-app
-
-# 5. Implement the application
-./workflow-scripts/implement-story-plan.sh ~/ideas/my-app
+# 4. Implement the application
+./workflow-scripts/implement-plan.sh ~/ideas/my-app
 ----
