Rename i2c to i2code across entire codebase
Co-authored by Claude Code

--- a/README.adoc
+++ b/README.adoc
@@ -26,7 +26,7 @@ The developer must carefully review any GenAI-generated code and provide prompt 
 Idea to Code consists of the following:
 
 * The `idea-to-code.sh` script that implements the idea to code workflow
-* The `i2c` CLI tool — a UV-installable Python CLI for plan file management (reading, updating, and structuring implementation plans)
+* The `i2code` CLI tool — a UV-installable Python CLI for plan file management (reading, updating, and structuring implementation plans)
 * A Claude Code plugin that provides skills, commands and hooks
 * Template `CLAUDE.md` and `.settings.local.json`
 * Supporting scripts
@@ -62,18 +62,18 @@ Note: the file name is prefixed with the directory name.
 
 For example, see https://github.com/humansintheloop-dev/humansintheloop-dev-examples-loctree/tree/master/docs/features/loc-outliner[humansintheloop-dev-examples-loctree/docs/features/loc-outliner], which is described in more detail below.
 
-=== The `i2c` CLI tool
+=== The `i2code` CLI tool
 
-The `i2c` CLI tool provides structured plan file management commands used by the `plan-file-management` skill to enable Claude to efficiently read and edit plan files.
+The `i2code` CLI tool provides structured plan file management commands used by the `plan-file-management` skill to enable Claude to efficiently read and edit plan files.
 It supports marking tasks and steps complete, inserting/deleting/reordering threads and tasks, and querying plan status.
 
 Example commands:
 
 [source,bash]
 ----
-i2c plan get-next-task path/to/plan.md
-i2c plan mark-task-complete path/to/plan.md --thread 1 --task 2 --rationale "All tests passing"
-i2c plan list-threads path/to/plan.md
+i2code plan get-next-task path/to/plan.md
+i2code plan mark-task-complete path/to/plan.md --thread 1 --task 2 --rationale "All tests passing"
+i2code plan list-threads path/to/plan.md
 ----
 
 === Guiding Claude code
@@ -83,7 +83,7 @@ This project defines the `idea-to-code` Claude Code plugin along with template `
 The plugin defines various skills, commands and hooks.
 Key skills include:
 
-* `plan-file-management` - tells Claude when and how to use `i2c plan` commands to read and edit plan files
+* `plan-file-management` - tells Claude when and how to use `i2code plan` commands to read and edit plan files
 * `tdd` - implements a TDD red-green-refactor workflow
 * `commit-guidelines` - structures the Git commit message
 * ...
@@ -144,7 +144,7 @@ cd humansintheloop-dev-workflow-and-tools
 This registers the local clone as a plugin marketplace and installs the `idea-to-code` plugin.
 Restart Claude Code to load the plugin.
 
-Then install the `i2c` CLI tool:
+Then install the `i2code` CLI tool:
 
 [source,bash]
 ----
