Move session and issue tracking from .claude/ to .hitl/
Update session-recorder, issue-session-tagger, and claude-issue-report
to write to .hitl/sessions and .hitl/issues instead of .claude/sessions
and .claude/issues.

Add `i2code manage-tracking` command with:
- --migrate: moves .claude/{issues,sessions} to .hitl/, handles symlinks
  by transferring them, merges directory contents into symlink targets,
  removes stale debug.log, updates .gitignore, warns about subdirectories
  no longer covered by gitignore
- --link DIR: symlinks .hitl/{issues,sessions} to DIR/{issues,sessions}
- --dry-run: preview changes without modifying anything

Co-authored by Claude Code

--- a/README.adoc
+++ b/README.adoc
@@ -105,10 +105,8 @@ It's essential, therefore, to continue update the plugin to improve how Claude C
 
 To support continuous improvement, the `idea-to-code` Claude Code plugin provides the following capabilities:
 
-* `claude-issue-report` - a slash command that reports an issue in `.claude/issues` 
-* hooks - record the Claude sessions (`.claude/sessions`) and associate filed issues with the session
-
-NOTE: it's useful to create symbolic links from `.claude/issues` and `.claude/sessions` to project-specific subdirectory in a centralized location, e.g. `~/hitl-tracking`.
+* `claude-issue-report` - a slash command that reports an issue in `.hitl/issues`
+* hooks - record the Claude sessions (`.hitl/sessions`) and associate filed issues with the session
 
 In addition, there's are the following scripts:
 
