--- a/docs/scripts/idea-to-code.adoc
+++ b/docs/scripts/idea-to-code.adoc
@@ -14,7 +14,7 @@ This script automates the workflow management, detecting your current state and 
 
 [source,bash]
 ----
-./workflow-scripts/idea-to-code.sh <directory>
+i2code idea-to-plan idea-to-code <directory>
 ----
 
 === Parameters
@@ -31,7 +31,7 @@ This script automates the workflow management, detecting your current state and 
 mkdir ~/projects/my-new-idea
 
 # Start the orchestrator
-./workflow-scripts/idea-to-code.sh ~/projects/my-new-idea
+i2code idea-to-plan idea-to-code ~/projects/my-new-idea
 ----
 
 == Workflow States
@@ -171,7 +171,7 @@ Create a new directory for each project to keep workflows organized:
 [source,bash]
 ----
 mkdir ~/ideas/project-name
-./workflow-scripts/idea-to-code.sh ~/ideas/project-name
+i2code idea-to-plan idea-to-code ~/ideas/project-name
 ----
 
 === Resuming Work
@@ -180,7 +180,7 @@ Run the orchestrator on an existing project directory to continue where you left
 
 [source,bash]
 ----
-./workflow-scripts/idea-to-code.sh ~/ideas/existing-project
+i2code idea-to-plan idea-to-code ~/ideas/existing-project
 ----
 
 === Handling Failures
